--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap-icons": "^1.9.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.20",
