--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-icons": "^1.9.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1"
   },
