--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://GuiHolanda.github.io/movieFinder_v03",
   "name": "moviefinder",
   "private": true,
   "version": "0.0.0",
@@ -11,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.9.1",
+    "gh-pages": "^4.0.0",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
